--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "bower-asset/fontawesome": "4.5.*",
         "bower-asset/scroll-to-top": "*",
         "bower-asset/bootstrap-confirmation2": "*",
-        "bower-asset/semantic": "~2"
+        "bower-asset/semantic": "~2",
+        "codemix/yii2-localeurls": "^1.3"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
