--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,12 @@
         "bower-asset/scroll-to-top": "*",
         "bower-asset/bootstrap-confirmation2": "*",
         "bower-asset/semantic": "~2",
-        "codemix/yii2-localeurls": "^1.3"
+        "codemix/yii2-localeurls": "^1.3",
+        "bower-asset/animate.css": "*",
+        "bower-asset/iGrowl": "*",
+        "bower-asset/chosen": "*",
+        "bower-asset/js-cookie": "*",
+        "bower-asset/jquery.easing": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
