--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,10 @@
         "bower-asset/iGrowl": "*",
         "bower-asset/chosen": "*",
         "bower-asset/js-cookie": "*",
-        "bower-asset/jquery.easing": "*"
+        "bower-asset/jquery.easing": "*",
+        "bower-asset/jquery-mousewheel": "*",
+        "bower-asset/jquery-form": "*",
+        "bower-asset/jquery.scrollTo": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
