--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "bower-asset/jquery.easing": "*",
         "bower-asset/jquery-mousewheel": "*",
         "bower-asset/jquery-form": "*",
-        "bower-asset/jquery.scrollTo": "*"
+        "bower-asset/jquery.scrollTo": "*",
+        "bower-asset/jquery-cookie": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
