--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
         "bower-asset/jquery-form": "*",
         "bower-asset/jquery.scrollTo": "*",
         "bower-asset/jquery-cookie": "*",
-        "yii2mod/yii2-timezone": "dev-master"
+        "cybercog/yii2-google-analytics": "^0.3.1"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
