--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "codemix/yii2-localeurls": "^1.3",
         "bower-asset/animate.css": "*",
         "bower-asset/iGrowl": "*",
-        "bower-asset/chosen": "*",
+        "bower-asset/chosen": "1.4.2",
         "bower-asset/js-cookie": "*",
         "bower-asset/jquery.easing": "*",
         "bower-asset/jquery-mousewheel": "*",
