--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "bower-asset/jquery.scrollTo": "*",
         "bower-asset/jquery-cookie": "*",
         "cybercog/yii2-google-analytics": "^0.3.1",
-        "himiklab/yii2-recaptcha-widget": "^1.0"
+        "himiklab/yii2-recaptcha-widget": "^1.0",
+        "justinvoelker/yii2-awesomebootstrapcheckbox": "^1.0"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
