--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "bower-asset/jquery-form": "*",
         "bower-asset/jquery.scrollTo": "*",
         "bower-asset/jquery-cookie": "*",
+        "bower-asset/masonry": "*",
         "cybercog/yii2-google-analytics": "^0.3.1",
         "himiklab/yii2-recaptcha-widget": "^1.0",
         "justinvoelker/yii2-awesomebootstrapcheckbox": "^1.0"
