--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
         "himiklab/yii2-recaptcha-widget": "^1.0",
         "justinvoelker/yii2-awesomebootstrapcheckbox": "^1.0",
         "alexander-suter/yii2-browser-info": "^2.0",
-        "nmdimas/yii2-user-agent-parser": "^1.0"
+        "nmdimas/yii2-user-agent-parser": "^1.0",
+        "dlds/yii2-infinite-scroll": "0.2"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
