--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
         "bower-asset/jquery.scrollTo": "*",
         "bower-asset/jquery-cookie": "*",
         "bower-asset/masonry": "*",
-        "bower-asset/jquery-infinite-scroll": "*",
+        "bower-asset/jquery-infinite-scroll": "v2.0.2",
         "cybercog/yii2-google-analytics": "^0.3.1",
         "himiklab/yii2-recaptcha-widget": "^1.0",
         "justinvoelker/yii2-awesomebootstrapcheckbox": "^1.0",
