--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
         "alexander-suter/yii2-browser-info": "^2.0",
         "nmdimas/yii2-user-agent-parser": "^1.0",
         "guzzlehttp/guzzle": "~6.0",
-        "electrolinux/phpquery": "^0.9.6"
+        "electrolinux/phpquery": "^0.9.6",
+        "yiisoft/yii2-redis": "^2.0"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
