--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "express": "*",
     "socket.io": "*",
-    "redis": "*"
+    "redis": "*",
+    "log": "*"
   },
   "engine": "node 0.4.1"
 }
