--- a/tests/codeception/frontend/acceptance.suite.yml
+++ b/tests/codeception/frontend/acceptance.suite.yml
@@ -5,6 +5,6 @@ modules:
         - WebDriver
     config:
         WebDriver:
-            url: test.setyes.dev
+            url: http://test.setyes.dev
             browser: chrome
             restart: false
