--- a/tests/codeception/frontend/functional.suite.yml
+++ b/tests/codeception/frontend/functional.suite.yml
@@ -5,13 +5,13 @@
 # (tip: better to use with frameworks).
 
 # RUN `build` COMMAND AFTER ADDING/REMOVING MODULES.
-#basic/web/index.php
+# basic/web/index.php
 class_name: FunctionalTester
 modules:
     enabled:
       - Filesystem
       - Yii2
-      - tests\codeception\common\_support\FixtureHelper
+#-      - tests\codeception\common\_support\FixtureHelper
     config:
         Yii2:
             configFile: '../config/frontend/functional.php'
